--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,18 +28,21 @@
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <CheckBox
+            android:button="@drawable/checkboxicon"
             android:id="@+id/cbInt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Int" />
 
         <CheckBox
+            android:button="@drawable/checkboxicon"
             android:id="@+id/cbString"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="String" />
 
         <CheckBox
+            android:button="@drawable/checkboxicon"
             android:id="@+id/cbDouble"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
